@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam classAttributeIconSize 0

class CommandRunner LOGIC_COLOR {
    - isRunning : boolean
    - skuList : SKUList
    - skuHandler : SkuCommandHandler
    - taskHandler : TaskCommandHandler
    - viewHandler : ViewCommandHandler
    + CommandRunner(skuList : SKUList)
    + isRunning() : boolean
    + run(cmd : ParsedCommand) : void
    - handleExport() : void
}

class ParsedCommand LOGIC_COLOR_T1 {
    + getCommandWord() : String
}

class SkuCommandHandler LOGIC_COLOR_T2 {
    + handleAddSku(cmd : ParsedCommand) : void
    + handleEditSku(cmd : ParsedCommand) : void
    + handleDeleteSku(cmd : ParsedCommand) : void
}

class TaskCommandHandler LOGIC_COLOR_T2 {
    + handleAddSkuTask(cmd : ParsedCommand) : void
    + handleEditTask(cmd : ParsedCommand) : void
    + handleDeleteTask(cmd : ParsedCommand) : void
    + handleMarkTask(cmd : ParsedCommand) : void
    + handleUnmarkTask(cmd : ParsedCommand) : void
}

class ViewCommandHandler LOGIC_COLOR_T2 {
    + handleListTasks(cmd : ParsedCommand) : void
    + handleFind(cmd : ParsedCommand) : void
}

class SKUList MODEL_COLOR {
}

class Storage STORAGE_COLOR {
    + {static} saveState(skuList : SKUList) : void
    + {static} loadState(skuList : SKUList) : void
}

class Export STORAGE_COLOR {
    + {static} exportToTextFile(skuList : SKUList) : void
}

class ViewMap UI_COLOR {
    + printTaskMap(skuList : SKUList) : void
}

class Ui UI_COLOR {
    + {static} printHelp() : void
    + {static} printGoodbye() : void
    + {static} printUnknownCommand(cmd : String) : void
    + {static} printSuccess(msg : String) : void
    + {static} printError(msg : String) : void
}

CommandRunner -down-> "1" SkuCommandHandler : skuHandler
CommandRunner -down-> "1" TaskCommandHandler : taskHandler
CommandRunner -down-> "1" ViewCommandHandler : viewHandler
CommandRunner -right-> "1" SKUList : skuList
CommandRunner ..> ParsedCommand : <<uses>>
CommandRunner ..> Storage : <<uses>>
CommandRunner ..> Export : <<uses>>
CommandRunner ..> ViewMap : <<uses>>
CommandRunner ..> Ui : <<uses>>
@enduml
